--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,15 @@ requires-python = ">=3.12"
 dependencies = ["humanize>=4.11.0", "scaffold-framework>=0.5.1"]
 
 [dependency-groups]
-dev = ["black", "djlint", "import-linter", "mypy", "pytest", "ruff"]
+dev = [
+    "black",
+    "djlint",
+    "import-linter",
+    "mypy",
+    "pytest",
+    "pytest-asyncio",
+    "ruff",
+]
 
 [tool.mypy]
 disable_error_code = "import-untyped"
