--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -2,7 +2,7 @@ services:
   proxy:
     restart: always
     command:
-      - --providers.swarm.endpoint=unix:///var/run/docker.sock
+      - --providers.swarm=true
       - --providers.swarm.exposedbydefault=false
       - --certificatesresolvers.letsencrypt.acme.email=${ACME_EMAIL}
       - --certificatesresolvers.letsencrypt.acme.httpchallenge=true
