--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,11 @@ name = "app"
 version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["humanize>=4.11.0", "scaffold-framework>=0.7.0"]
+dependencies = [
+    "humanize>=4.11.0",
+    "openai>=1.58.1",
+    "scaffold-framework>=0.7.0",
+]
 
 [dependency-groups]
 dev = [
