--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -43,6 +43,9 @@ services:
   app:
     networks:
       - web
+    dns:
+      - 8.8.8.8
+      - 1.1.1.1
     deploy:
       replicas: 1
       update_config:
